--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.12",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
     "iconv-lite": "^0.6.3",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
